tests/res/assignment/field_external_immutable_rejected.say
// An external write to an immutable field is rejected.
type T {
    pub value;
    init() { this.value = 1; }
}
say t = T();
t.value = 2; // error: Cannot assign immutable field 'value' from outside its type; declare it 'mut'
